# KirinNet

./: DECISIONS.md  LICENSE  README.md  TASKPLAN.md  致谢_ACKNOWLEDGMENTS.md
.github/workflows/: ci.yml
.hermes/: tasks.json
01_Standard/: did-dns-protocol.md  dns_automation.md  draft-kirin-yucall-kirindns-adrp-00.txt  draft-kirin-yucall-kirindns-adrp-01.txt  im_protocol.md  security_model_v1.md  spec_v1.md
02_Libraries/: README.md
02_Libraries/c/: kirin_dns.c  kirin_dns.h
02_Libraries/cpp/: kirin_dns.hpp
02_Libraries/csharp/: KirinDns.cs
02_Libraries/dart/: kirin_dns.dart
02_Libraries/go/: README.md  go.mod  kirin_dns.go  kirin_dns_test.go
02_Libraries/java/: KirinDns.java
02_Libraries/javascript/: kirin_dns.d.ts  kirin_dns.js  package.json
02_Libraries/kotlin/: KirinDns.kt
02_Libraries/lua/: kirin_dns.lua
02_Libraries/php/: kirin_dns.php
02_Libraries/python/: kirin_dns.py  pyproject.toml
02_Libraries/python/tests/: test_kirin_dns.py
02_Libraries/ruby/: kirin_dns.rb
02_Libraries/rust/: Cargo.toml  README.md
02_Libraries/rust/src/: lib.rs
02_Libraries/swift/: KirinDNS.swift
03_Browser_Extension/: dns_fetcher.js  manifest.json  service_worker.js
04_Chromium_Browser/: build_instructions.md  patch_notes.md
05_Adoption/: demo_sites.md  go_to_market.md  rfc_draft.md
07_User_Node/: .dockerignore  Dockerfile  README.md  api.md  docker-compose.yml  package-lock.json  package.json  server.js  spec.md  storage_architecture.md
08_KirinNet/: .dockerignore  .env.example  Dockerfile  api_contract.md  architecture.md  docker-compose.yml  package-lock.json  package.json
09_Pub_Aggregator/: Dockerfile  crawler.js  docker-compose.yml  package.json  seeds.txt  server.js
(+69 files in other folders)
